# parti-oes_de_arquivo

./: CMakeLists.txt  cliente.c  cliente.h  geracao_particoes.c  geracao_particoes.h  lista_clientes.c  lista_clientes.h  nomes.c  nomes.h  test_geracao_particoes.c  ufftest.h
